# TSA-Suite_blue

./: .gitignore  KNOWN_ISSUES.md  pyproject.toml  verify_cwdw_sage.py
docs/: KNOWN_ISSUES.md  MIGRATION_DECIDERS.md  MIGRATION_OPS.md  MIGRATION_SCORERS.md  TIMELINE.md  ridge_forecaster_design.md
output/hbhd_arx_reproduction/: rolling_result_h30.csv
output/hbhd_arx_reproduction/processed/: train_chunk_ids.csv
output/hbhd_arx_reproduction/saved_models/: ridge_config_h30.yaml  ridge_config_h40.yaml  ridge_config_h5.yaml  ridge_config_h50.yaml
output/hbhd_arx_reproduction/saved_models/ridge_h30/: _forecaster_state.npz  _model.npz  config.json
output/hbhd_arx_reproduction/saved_models/ridge_h40/: _forecaster_state.npz  _model.npz  config.json
output/hbhd_arx_reproduction/saved_models/ridge_h5/: _forecaster_state.npz  _model.npz  config.json
output/hbhd_arx_reproduction/saved_models/ridge_h50/: _forecaster_state.npz  _model.npz  config.json
scripts/: reproduce_hbhd_arx.py  reproduce_hbhd_arx_sliding.py  run_sliding_window_eval.py  smooth_feature_demo.py  verify_cwdw_sage.py
src/bianque/: __init__.py
src/bianque/engine/: __init__.py
src/bianque/engine/hpo/: __init__.py  hpo.md  result.py  search_hint.py  trainer.py
src/bianque/engine/operator/: base.md  base.py
src/bianque/engine/operator/cli/: README.md  __init__.py  __main__.py  config_loader.py  detection.py  evaluation.py  feature_construction.py  help_generator.py  io.py  registry.py
src/bianque/engine/operator/detection/: TIMELINE.md  __init__.py  base.py  cicada.py  composite.py  detection.md  knn.py  pca.py  percentile_decider.py  residual_scorer.py  threshold_decider.py  time_rcd.py  zscore.py
src/bianque/engine/operator/evaluation/: __init__.py  base.py  binary_classification.py  binary_curve.py  evaluation.md  multi_classification.py
src/tsas/: __init__.py
src/tsas/basic/util/: exception.py  random.py
src/tsas/engine/hpo/: __init__.py  hpo.md  search_hint.py  trainer.py
src/tsas/engine/operator/: base.md  base.py
src/tsas/engine/operator/cli/: README.md  __main__.py  cli.md  common.py  detection.py  evaluation.py  feature_construction.py  feature_selection.py  forecasting.py  help_generator.py  io.py  registry.py
src/tsas/engine/operator/detection/: __init__.py  _local_libs.py  abod.py  base.py  cblof.py  cicada.py  cof.py  composite.py  copod.py  detection.md  dist_merge_scorer.py  ecod.py  eif.py  gmm.py  hbos.py  iforest.py  inne.py  kde.py  knn.py  loda.py  lof.py  mcd.py  mean_merge_scorer.py  mean_predictor.py  ocsvm.py  pca.py  percentile_decider.py  residual_scorer.py  rod.py  sod.py  sos.py  threshold_decider.py  time_rcd.py  xihe.py  zscore.py
src/tsas/engine/operator/evaluation/: _vus_utils.py  affiliation_metric.py  ari_metric.py  average_precision_metric.py  base.py  binary_classification.py  binary_curve.py  cohen_kappa_metric.py  confidence_metric.py  detection_delay_metric.py  dtw_distance_metric.py  dtw_path_metric.py  entropy_metric.py  evaluation.md  event_based_f1_metric.py  exact_match_ratio_metric.py  fbeta_metric.py  forecasting_metrics.py  hamming_loss_metric.py  macro_f1_metric.py  mae_metric.py  mape_metric.py  mase_metric.py  mi_metric.py  micro_f1_metric.py  mse_metric.py  multi_classification.py  multi_label_accuracy_metric.py  nab_best_threshold_metric.py  nab_score_metric.py  nmi_metric.py  normalize_score_metric.py  (+16 more)
src/tsas/engine/util/: __init__.py  pt_helper.py
tests/test_cli/: test_common.py  test_config_loader.py  test_detection.py  test_evaluation.py  test_feature_construction.py  test_forecasting.py  test_help_generator.py  test_io.py  test_main.py  test_operator_versions.py  test_registry.py  test_selection.py  test_type_inference.py
tests/test_engine_hpo/: test_result.py  test_search_hint.py  test_trainer.py
tests/test_engine_operator/: test_base.py  test_output_type.py  test_version.py
tests/test_engine_operator/test_detection/: conftest.py  test_abod.py  test_cicada.py  test_composite.py  test_copod.py  test_dist_merge_scorer.py  test_ecod.py  test_eif.py  test_hbos.py  test_iforest.py  test_knn.py  test_lof.py  test_mean_merge_scorer.py  test_mean_predictor.py  test_ocsvm.py  test_pca.py  test_percentile_decider.py  test_pyod_migrated.py  test_residual.py  test_residual_scorer.py  test_rod.py  test_sklearn_migrated.py  test_sos.py  test_threshold_decider.py  test_time_rcd.py  test_xihe.py  test_zscore.py
tests/test_engine_operator/test_evaluation/: test_affiliation_metric.py  test_binary_classification.py  test_binary_curve.py  test_clustering_nab_metric.py  test_dtw_confidence_metric.py  test_event_based_f1_metric.py  test_forecasting_metrics.py  test_multi_classification.py  test_point_adjust.py  test_self_evaluation.py
tests/test_engine_operator/test_feature/test_construction/: test_base.py  test_signal_feature.py  test_simple_feature.py  test_smooth_feature.py
tests/test_engine_operator/test_feature_construction/: test_base.py  test_bqlib_migrated_ops.py  test_signal_feature.py  test_simple_feature.py  test_smooth_feature.py
tests/test_engine_operator/test_feature_selection/: test_cwdw_sage_selector.py
tests/test_engine_operator/test_forecasting/: test_base_forecaster.py  test_itransformer.py  test_lightgbm.py  test_lightgbm_mimo.py  test_xgboost.py  test_xgboost_mimo.py
(+33 files in other folders)
