[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bianque-suite"
version = "0.1.1"
description = "BianQue-Suite: A modular anomaly detection framework with four-layer operator architecture"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "BianQue Team" },
]
keywords = ["anomaly-detection", "time-series", "feature-engineering", "predictive-maintenance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy",
    "pandas",
    "pydantic>=2.0",
    "loguru",
    "annotated-types",
]

[project.optional-dependencies]
hpo = [
    "optuna",
]
knn = [
    "scikit-learn",
]
# cicada-ad>=0.1.0 是本地包，未发布到 PyPI，无法通过 uv/pip 自动解析。
# 如需 CICADA 支持，请手动安装：pip install -e ../CICADA
# 恢复为正式 extra 的方式：
#   cicada = ["cicada-ad>=0.1.0"]
#   all = ["bianque-suite[hpo,knn,cicada]"]
all = [
    "bianque-suite[hpo,knn]",
]

[dependency-groups]
test = [
    "pytest>=7.0",
]

[project.scripts]
bianque = "bianque.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/bianque"]

[tool.hatch.build.targets.sdist]
include = [
    "src/bianque",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]
