[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tsa-suite"
version = "0.1.1"
description = "TSA-Suite: A modular anomaly detection framework with four-layer operator architecture"
requires-python = ">=3.11"
keywords = ["anomaly-detection", "time-series", "feature-engineering", "predictive-maintenance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy",
    "pandas",
    "pydantic>=2.0",
    "loguru",
    "annotated-types",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
hpo = [
    "optuna",
]
knn = [
    "scikit-learn",
]
sklearn = [
    "scikit-learn>=1.3",
]
pyod = [
    "pyod>=2.0",
]
torch = [
    "torch>=2.0",
]
lightgbm = [
    "lightgbm>=4.0",
]
xgboost = [
    "xgboost>=1.7.6",
]
cwdw_sage = [
    "tsa-suite[hpo,lightgbm,xgboost]",
    "imbalanced-learn",
    "sage-importance>=0.0.6",
    "statsmodels",
    "dcor>=0.6,<0.8",
    "numba<0.61",
    "lazypredict>=0.3",
]
scipy = [
    "scipy>=1.11",
]
all = [
    "tsa-suite[hpo,knn,sklearn,pyod,torch,lightgbm,xgboost,scipy,cwdw_sage]",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.21",
]
test = [
    "pytest>=7.0",
]

[project.scripts]
tsas = "tsas.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tsas"]

[tool.hatch.build.targets.sdist]
include = [
    "src/tsas",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

